# appmap-dotnet

./: .clang-format  CMakeLists.txt  README.md
.github/workflows/: build.yml
clrie/InstrumentationEngine.Api/: InstrumentationEngine.h
cmake/: CPM.cmake
com/: CMakeLists.txt
com/include/com/: bstr.h
launcher/: AppLand.AppMap.csproj  Launcher.cs
scripts/: package.sh
smoketest/: appmap_test.sh
source/: classmap.h  config.cpp  config.h  generation.cpp  generation.h  instrumentation.cpp  method.cpp  method_info.h  recorder.cpp  test_framework.cpp  web_framework.cpp
test/: CMakeLists.txt
test/AppMap.Test/: AppMap.Test.csproj  run.sh
test/AppMap.Test/expected/: AppMap.Test.AspNetTest.Builder.appmap.json  AppMap.Test.FlowTest.ExcerciseDisablableConsole.appmap.json  AppMap.Test.ThreadsTest.CanInterleave.appmap.json  AppMap.Test.ValuesTest.ByRef.appmap.json  AppMap.Test.ValuesTest.Generic.appmap.json  AppMap.Test.ValuesTest.NullableGuid.appmap.json  AppMap.Test.ValuesTest.NullableString.appmap.json  AppMap.Test.ValuesTest.NullableUri.appmap.json  AppMap.Test.ValuesTest.Span.appmap.json  AppMap.Test.ValuesTest.Struct.appmap.json
